--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -4,16 +4,17 @@
 #==============================================================================
 
 input {
-  kinesis {
-    kinesis_stream_name => "${KINESIS_STREAM_NAME}"
-    region => "${AWS_REGION}"
-    application_name => "${PROJECT_NAME}-logstash-consumer"
-    
-    codec => plain {
-      charset => "ISO-8859-1" # Bin. D를 안전하게 처리
-    }
-    tags => ["kinesis", "raw"]  
-  }
+#  kinesis {
+#    kinesis_stream_name => "${KINESIS_STREAM_NAME}"
+#    region => "${AWS_REGION}"
+#    application_name => "${PROJECT_NAME}-logstash-consumer"
+#    
+#    codec => plain {
+#      charset => "ISO-8859-1" # Bin. D를 안전하게 처리
+#    }
+#    tags => ["kinesis", "raw"]  
+#  }
+  stdin{}
 }
 
 filter {
@@ -301,40 +302,43 @@ filter {
 #==============================================================================
 # OUTPUT
 #==============================================================================
-output {
-  # OpenSearch로 메인 데이터 전송
-  opensearch {
-    hosts => ["https://${OPENSEARCH_HOST}:443"]
-    index => "2sec-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
-    
-    # IAM으로 변경
-    auth_type => {
-      type => 'aws_iam' 
-      region => "${AWS_REGION}"
-    }
-    
-    ecs_compatibility => disabled
-    
-    # 템플릿 관리 비활성화 (에러 8번 해결)
-    manage_template => false
-
-    retry_on_conflict => 3
-  }
-  
-  # 🔥 수정: CloudWatch 메트릭 설정으로 변경
-  if "parse_error" in [tags] {
-    cloudwatch {
-      metricname => "ParseErrors"                    # log_group_name 대신
-      namespace => "SIEM/Logstash"                   # 네임스페이스
-      region => "${AWS_REGION}"
-      unit => "Count"                                # 단위
-      value => "1"                                   # 값
-      
-      # 선택사항: 차원 추가
-      dimensions => { 
-        "Environment" => "Test"
-        "Project" => "${PROJECT_NAME}"
-      }
-    }
+output { 
+# # OpenSearch로 메인 데이터 전송
+# opensearch {
+#   hosts => ["https://${OPENSEARCH_HOST}"]
+#   index => "2sec-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
+#   
+#   # IAM으로 변경
+#   auth_type => {
+#     type => 'aws_iam' 
+#     region => "${AWS_REGION}"
+#   }
+#   
+#   ecs_compatibility => disabled
+#   
+#   # 템플릿 관리 비활성화 (에러 8번 해결)
+#   manage_template => false
+# 
+#   retry_on_conflict => 3
+# }
+# 
+# # 🔥 수정: CloudWatch 메트릭 설정으로 변경
+# if "parse_error" in [tags] {
+#   cloudwatch {
+#     metricname => "ParseErrors"                    # log_group_name 대신
+#     namespace => "SIEM/Logstash"                   # 네임스페이스
+#     region => "${AWS_REGION}"
+#     unit => "Count"                                # 단위
+#     value => "1"                                   # 값
+#     
+#     # 선택사항: 차원 추가
+#     dimensions => { 
+#       "Environment" => "Test"
+#       "Project" => "${PROJECT_NAME}"
+#     }
+#   }
+# }
+    stdout {
+    codec => rubydebug
   }
 }
