fix: application name 수정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -7,7 +7,7 @@ input {
   kinesis {
     kinesis_stream_name => "${KINESIS_STREAM_NAME}"
     region => "${AWS_REGION}"
-    application_name => "${PROJECT_NAME}-logstash-consumer"
+    application_name => "${APPLICATION_NAME}"
     
     codec => plain {
       charset => "ISO-8859-1" # Bin. D를 안전하게 처리
