fix: 에러 코드 수정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -10,7 +10,7 @@ input {
     application_name => "${APPLICATION_NAME}"
     
     codec => plain {
-      charset => "ISO-8859-1" # Bin. D를 안전하게 처리
+      charset => "UTF-8" 
     }
     tags => ["kinesis", "raw"]  
   }
@@ -302,16 +302,23 @@ filter {
 # OUTPUT
 #==============================================================================
 output {
+
+  # 🔍 디버깅용 stdout (데이터가 들어오는지 확인용)
+  stdout { 
+    codec => line {
+      format => "🚀 [LOGSTASH] %{@timestamp} | %{[source][ip]} | %{message}"
+    }
+  }
+  
   # OpenSearch로 메인 데이터 전송
   opensearch {
     hosts => ["https://${OPENSEARCH_HOST}:443"]
     index => "2sec-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
     
     # IAM으로 변경
-    auth_type => {
-      type => 'aws_iam' 
-      region => "${AWS_REGION}"
-    }
+    auth_type => "aws_iam"
+    region => "${AWS_REGION}"
+     
     
     ecs_compatibility => disabled
     
