--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -304,12 +304,12 @@ filter {
 output {
 
   # 🔍 디버깅용 stdout (데이터가 들어오는지 확인용)
-  stdout { 
-    codec => line {
-      format => "🚀 [LOGSTASH] %{@timestamp} | %{[source][ip]} | %{message}"
-    }
-  }
-  
+#  stdout { 
+#    codec => line {
+#      format => "🚀 [LOGSTASH] %{@timestamp} | %{[source][ip]} | %{message}"
+#    }
+#  }
+
   # OpenSearch로 메인 데이터 전송
   opensearch {
     hosts => ["https://${OPENSEARCH_HOST}:443"]
