feat: config 파일 리팩토링

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -1,340 +1,216 @@
 #==============================================================================
-# 2SeC SIEM Logstash Pipeline Configuration  
-# Kinesis Data Stream → Processing → OpenSearch
+# 2SeC SIEM Logstash Pipeline Configuration
+# CloudWatch Logs → Kinesis → Logstash → OpenSearch
 #==============================================================================
 
+############################
+# INPUT
+############################
 input {
   kinesis {
     kinesis_stream_name => "${KINESIS_STREAM_NAME}"
-    region => "${AWS_REGION}"
-    application_name => "${PROJECT_NAME}-logstash-consumer"
-    
+    region              => "${AWS_REGION}"
+    application_name    => "${PROJECT_NAME}-logstash-consumer"
+
     codec => plain {
-      charset => "ISO-8859-1" # Bin. D를 안전하게 처리
+      charset => "ISO-8859-1"
     }
-    tags => ["kinesis", "raw"]  
-  }ß
+
+    tags => ["kinesis", "cloudwatch"]
+  }
 }
 
+############################
+# FILTER
+############################
 filter {
-#---------------------------------------------------------------------------
-  # 0. GZIP 압축 해제 및 JSON 파싱 (새로 추가!)
-#---------------------------------------------------------------------------
-  # 안전한 GZIP + JSON 처리
-    ruby {
-      code => "
-        begin
-          message = event.get('message')
-          
-          if !message.nil? && message.is_a?(String) && message.length >= 2
-            # GZIP 매직넘버 체크 (0x1F, 0x8B)
-            if message.bytes[0] == 0x1F && message.bytes[1] == 0x8B
-              require 'zlib'
-              require 'stringio'
-              
-              begin
-                decompressed = Zlib::GzipReader.new(StringIO.new(message)).read
-                event.set('message', decompressed)
-                event.set('[@metadata][was_gzipped]', true)
-              rescue => e
-                event.set('[@metadata][gzip_error]', e.message)
-                event.tag('gzip_decode_failed')
-              end
-            end
-          end
-        rescue => e
-          event.set('[@metadata][ruby_error]', e.message)
-          event.tag('ruby_error')
+
+  #--------------------------------------------------------------------------
+  # 0. CloudWatch Logs Subscription payload decode (base64 + gzip)
+  #--------------------------------------------------------------------------
+  ruby {
+    code => "
+      require 'json'
+      require 'base64'
+      require 'zlib'
+      require 'stringio'
+
+      msg = event.get('message')
+
+      begin
+        parsed = JSON.parse(msg) rescue nil
+
+        if parsed && parsed.dig('awslogs', 'data')
+          raw = Base64.decode64(parsed['awslogs']['data'])
+          json_str = Zlib::GzipReader.new(StringIO.new(raw)).read
+
+          event.set('[@metadata][cw_payload]', json_str)
+          event.remove('message')
         end
-      "
-    }
-
-  
-  # 내장 JSON 파서 사용 (더 안전하고 빠름)
-  json {
-    source => "message"
-    skip_on_invalid_json => true
-    ecs_compatibility => disabled  # JSON 필터 ECS 설정
+      rescue => e
+        event.tag('decode_failed')
+        event.set('[@metadata][decode_error]', e.message)
+      end
+    "
   }
 
-  #---------------------------------------------------------------------------
-  # 1. 기본 필드 정리
-  #---------------------------------------------------------------------------
-  mutate {
-    remove_field => ["@version", "host", "path", "port", "type"]
-    add_field => {
-      "pipeline" => "${PROJECT_NAME}-logstash"
-      "[event][kind]" => "event"
-      "[event][category]" => "web"
-      "[event][dataset]" => "web.access"
+  #--------------------------------------------------------------------------
+  # 1. CloudWatch payload JSON 파싱
+  #--------------------------------------------------------------------------
+  if [@metadata][cw_payload] {
+    json {
+      source => "[@metadata][cw_payload]"
+      target => "cw"
+      ecs_compatibility => disabled
     }
   }
-  
-  # 타임스탬프 정규화
-  if [timestamp] {
+
+  #--------------------------------------------------------------------------
+  # 2. logEvents 배열 분해 (핵심)
+  #--------------------------------------------------------------------------
+  if [cw][logEvents] {
+    split {
+      field => "[cw][logEvents]"
+    }
+
+    mutate {
+      replace => {
+        "message" => "%{[cw][logEvents][message]}"
+      }
+    }
+
     date {
-      match => [ "timestamp", "ISO8601"]
+      match  => ["[cw][logEvents][timestamp]", "UNIX_MS"]
       target => "@timestamp"
     }
   }
-  
-  #---------------------------------------------------------------------------
-  # 2. 웹 로그 파싱 (Apache/Nginx Combined Log)
-  #---------------------------------------------------------------------------
-  if ![log_type] or [log_type] == "web" {
-    grok {
-      match => { 
-        "message" => "%{IPORHOST:[source][ip]} %{USER:ident} %{USER:auth} \[%{HTTPDATE:timestamp}\] \"(?:%{WORD:[http][request][method]} %{NOTSPACE:[url][original]}(?: HTTP/%{NUMBER:[http][version]})?|%{DATA:rawrequest})\" %{NUMBER:[http][response][status_code]} (?:%{NUMBER:[http][response][body][bytes]}|-) \"(?:%{DATA:[http][request][referrer]}|-)\" \"(?:%{DATA:[user_agent][original]}|-)\""
-      }
-      add_tag => ["web_parsed"]
-      ecs_compatibility => disabled  # Grok 필터 ECS 설정
+
+  #--------------------------------------------------------------------------
+  # 3. 웹 로그 파싱 (Apache / Nginx Combined)
+  #--------------------------------------------------------------------------
+  grok {
+    match => {
+      "message" => "%{IPORHOST:[source][ip]} %{USER:ident} %{USER:auth} \\[%{HTTPDATE:timestamp}\\] \"%{WORD:[http][request][method]} %{NOTSPACE:[url][original]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} (?:%{NUMBER:[http][response][body][bytes]}|-)"
     }
-    
-    # URL 파싱
-    if [url][original] {
-      ruby {
-        code => "
-          require 'uri'
-          url = event.get('[url][original]')
-          begin
-            uri = URI.parse(url)
-            event.set('[url][path]', uri.path)
-            event.set('[url][query]', uri.query) if uri.query
-          rescue => e
-            event.tag('url_parse_error')
-          end
-        "
-      }
-    }
-    
-    # User Agent 파싱
-    if [user_agent][original] {
-      useragent {
-        source => "[user_agent][original]"
-        target => "[user_agent]"
-        ecs_compatibility => disabled  # UserAgent 필터 ECS 설정
-      }
-    }
-    
-    # GeoIP 분석
-    if [source][ip] {
-      geoip {
-        source => "[source][ip]"
-        target => "[source][geo]"
-        ecs_compatibility => disabled  # GeoIP 필터 ECS 설정  
-      }
-    }
+    add_tag => ["web_parsed"]
+    ecs_compatibility => disabled
   }
-  
-  
-  #---------------------------------------------------------------------------
-  # 3. 🎯 YAML 기반 공격 탐지 엔진 (영구 불변!)
-  #---------------------------------------------------------------------------
-  ruby {
-    init => "
-      begin
-        # ✅ 절대 경로 사용 (require_relative 대신)
-        require '/usr/share/logstash/patterns/patterns_matcher.rb'
-        
-        # ✅ 파일 존재 확인
-        pattern_file = '/usr/share/logstash/patterns/attack_patterns.yml'
-        severity_file = '/usr/share/logstash/patterns/severity_mapping.yml'
-        
-        unless File.exist?(pattern_file)
-          puts '[ERROR] Attack patterns file not found: #{pattern_file}'
-          @pattern_matcher = nil
-        else
-          unless File.exist?(severity_file)
-            puts '[ERROR] Severity mapping file not found: #{severity_file}'
-            @pattern_matcher = nil
-          else
-            # ✅ 안전한 초기화
-            @pattern_matcher = AttackPatternMatcher.new(pattern_file, severity_file)
-            puts '[INFO] Attack detection engine initialized successfully'
-          end
-        end
-        
-      rescue LoadError => e
-        puts '[ERROR] Failed to load pattern matcher: #{e.message}'
-        @pattern_matcher = nil
-      rescue => e
-        puts '[ERROR] Attack detection engine initialization failed: #{e.message}'
-        @pattern_matcher = nil
-      end
-    "
-    
-    code => "
-      begin
-        # 메시지 및 컨텍스트 정보 추출
-        message = event.get('message').to_s
-        source_ip = event.get('[source][ip]')
-        
-        # ✅ 엔진 상태 확인
-        if @pattern_matcher.nil?
-          # 엔진 초기화 실패 시 기본 처리
-          event.set('[event][type]', 'access')
-          event.set('[event][outcome]', 'success')
-          event.set('severity', 'info')
-          event.set('[engine][status]', 'disabled')
-          event.set('[engine][reason]', 'initialization_failed')
-          event.tag('normal') 
-          event.tag('engine_disabled')
-        else
-          # 🚀 정상 공격 탐지 실행
-          detected_attacks = @pattern_matcher.detect_attacks(message, source_ip)
-          
-          if detected_attacks.empty?
-            #-----------------------------------------------------------------------
-            # 정상 트래픽 처리
-            #-----------------------------------------------------------------------
-            event.set('[event][type]', 'access')
-            event.set('[event][outcome]', 'success')
-            event.set('severity', 'info')
-            event.set('[engine][status]', 'active')
-            event.tag('normal')
-            
-          else
-            #-----------------------------------------------------------------------  
-            # 공격 탐지 처리
-            #-----------------------------------------------------------------------
-            event.set('[event][type]', 'attack')
-            event.set('[event][outcome]', 'unknown')
-            event.set('[engine][status]', 'active')
-            
-            # 가장 심각한 공격 정보를 메인으로 설정
-            primary_attack = detected_attacks.first
-            event.set('severity', primary_attack['severity'])
-            event.set('[attack][category]', primary_attack['category'])
-            event.set('[attack][technique]', primary_attack['technique'])
-            event.set('[attack][confidence]', primary_attack['confidence'])
-            
-            # 다중 공격 탐지 시 추가 정보 저장
-            if detected_attacks.size > 1
-              event.set('[attack][multiple_detected]', true)
-              event.set('[attack][count]', detected_attacks.size)
-              
-              # 모든 공격 정보를 배열로 저장
-              all_attacks = detected_attacks.map do |attack|
-                {
-                  'category' => attack['category'],
-                  'technique' => attack['technique'], 
-                  'severity' => attack['severity'],
-                  'confidence' => attack['confidence']
-                }
-              end
-              event.set('[attack][all_detected]', all_attacks)
-              
-              # 공격 카테고리 목록 (집계용)
-              categories = detected_attacks.map { |a| a['category'] }.uniq
-              event.set('[attack][categories]', categories)
-            end
-            
-            event.tag('attack')
-          end
-        end
-        
-      rescue => e
-        # ✅ 런타임 에러 처리
-        puts '[ERROR] Attack detection runtime error'
-        event.set('[event][type]', 'access')
-        event.set('[event][outcome]', 'success') 
-        event.set('severity', 'info')
-        event.set('[engine][status]', 'error')
-        event.set('[engine][error]', e.message)
-        event.tag('normal' ) 
-        event.tag ('engine_error')
-      end
-    "
-  }
-  #---------------------------------------------------------------------------
-  # 4. HTTP 응답 코드 기반 결과 판단
-  #---------------------------------------------------------------------------
-  if [http][response][status_code] {
+
+  #--------------------------------------------------------------------------
+  # 4. URL / UA / GeoIP
+  #--------------------------------------------------------------------------
+  if [url][original] {
     ruby {
       code => "
-        status_code = event.get('[http][response][status_code]').to_i
-        tags = event.get('tags') || []
-        has_attack_tag = tags.include?('attack')
-        
-        if has_attack_tag
-          # 공격 시도가 탐지된 경우
-          if status_code >= 200 && status_code < 300
-            event.set('[event][outcome]', 'success')      # 공격 성공 (위험!)
-            event.set('[attack][executed]', true)
-          else
-            event.set('[event][outcome]', 'failure')      # 공격 차단됨 (안전)
-            event.set('[attack][executed]', false)
-          end
-        else
-          # 정상 트래픽
-          if status_code >= 200 && status_code < 400
-            event.set('[event][outcome]', 'success')      # 정상 성공
-          else
-            event.set('[event][outcome]', 'failure')      # 정상 에러
-          end
+        require 'uri'
+        begin
+          uri = URI.parse(event.get('[url][original]'))
+          event.set('[url][path]', uri.path)
+          event.set('[url][query]', uri.query) if uri.query
+        rescue
+          event.tag('url_parse_error')
         end
       "
     }
   }
-  
-  #---------------------------------------------------------------------------
-  # 5. 최종 정제
-  #---------------------------------------------------------------------------
-  
-  # 파싱 상태 태깅
-  if "_grokparsefailure" in [tags] {
-    mutate {
-      add_tag => ["parse_error"]
-      add_field => { "parse_status" => "failed" }
+
+  if [source][ip] {
+    geoip {
+      source => "[source][ip]"
+      target => "[source][geo]"
+      ecs_compatibility => disabled
     }
-  } else {
-    mutate {
-      add_field => { "parse_status" => "success" }}
   }
 
-    # 불필요한 필드 제거
+  #--------------------------------------------------------------------------
+  # 5. 기본 필드 / ECS 성격 필드
+  #--------------------------------------------------------------------------
   mutate {
-    remove_field => ["ident", "auth", "rawrequest"]
+    add_field => {
+      "pipeline"          => "${PROJECT_NAME}-logstash"
+      "[event][kind]"     => "event"
+      "[event][category]" => "web"
+      "[event][dataset]"  => "web.access"
+    }
+
+    remove_field => [
+      "@version",
+      "cw",
+      "ident",
+      "auth"
+    ]
+  }
+
+  #--------------------------------------------------------------------------
+  # 6. 공격 탐지 엔진 (YAML 기반)
+  #--------------------------------------------------------------------------
+  ruby {
+    init => "
+      require '/usr/share/logstash/patterns/patterns_matcher.rb'
+      @matcher = AttackPatternMatcher.new(
+        '/usr/share/logstash/patterns/attack_patterns.yml',
+        '/usr/share/logstash/patterns/severity_mapping.yml'
+      )
+    "
+    code => "
+      msg = event.get('message').to_s
+      ip  = event.get('[source][ip]')
+
+      attacks = @matcher.detect_attacks(msg, ip)
+
+      if attacks.empty?
+        event.set('[event][type]', 'access')
+        event.set('[event][outcome]', 'success')
+        event.set('severity', 'info')
+        event.set('[engine][status]', 'active')
+        event.tag('normal')
+      else
+        a = attacks.first
+        event.set('[event][type]', 'attack')
+        event.set('[event][outcome]', 'unknown')
+        event.set('[engine][status]', 'active')
+
+        event.set('severity', a['severity'])
+        event.set('[attack][category]', a['category'])
+        event.set('[attack][technique]', a['technique'])
+        event.set('[attack][confidence]', a['confidence'])
+
+        event.tag('attack')
+      end
+    "
+  }
+
+  #--------------------------------------------------------------------------
+  # 7. HTTP 응답 코드 기반 결과 판단
+  #--------------------------------------------------------------------------
+  if [http][response][status_code] {
+    ruby {
+      code => "
+        code = event.get('[http][response][status_code]').to_i
+        if event.get('tags')&.include?('attack')
+          event.set('[event][outcome]', code < 300 ? 'success' : 'failure')
+        else
+          event.set('[event][outcome]', code < 400 ? 'success' : 'failure')
+        end
+      "
+    }
   }
 }
 
-#==============================================================================
+############################
 # OUTPUT
-#==============================================================================
-output { 
- # OpenSearch로 메인 데이터 전송
- opensearch {
-   hosts => ["https://${OPENSEARCH_HOST}"]
-   index => "2sec-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
-   
-   # IAM으로 변경
-   auth_type => {
-     type => 'aws_iam' 
-     region => "${AWS_REGION}"
-   }
-   
-   ecs_compatibility => disabled
-   
-   # 템플릿 관리 비활성화 (에러 8번 해결)
-   manage_template => false
- 
-   retry_on_conflict => 3
- }
- 
- # 🔥 수정: CloudWatch 메트릭 설정으로 변경
- if "parse_error" in [tags] {
-   cloudwatch {
-     metricname => "ParseErrors"                    # log_group_name 대신
-     namespace => "SIEM/Logstash"                   # 네임스페이스
-     region => "${AWS_REGION}"
-     unit => "Count"                                # 단위
-     value => "1"                                   # 값
-     
-     # 선택사항: 차원 추가
-     dimensions => { 
-       "Environment" => "Test"
-       "Project" => "${PROJECT_NAME}"
-     }
-   }
- }
+############################
+output {
+  opensearch {
+    hosts => ["https://${OPENSEARCH_HOST}"]
+    index => "2sec-siem-%{+yyyy.MM.dd}"
+
+    auth_type => {
+      type   => "aws_iam"
+      region => "${AWS_REGION}"
+    }
+
+    ecs_compatibility => disabled
+    manage_template   => false
+  }
 }
