--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -138,47 +138,43 @@ filter {
       "cw",
       "ident",
       "auth"
-    ]
+   ]
   }
 
   #--------------------------------------------------------------------------
   # 6. 공격 탐지 엔진 (YAML 기반)
   #--------------------------------------------------------------------------
-  ruby {
-    init => "
-      require '/usr/share/logstash/patterns/patterns_matcher.rb'
-      @matcher = AttackPatternMatcher.new(
-        '/usr/share/logstash/patterns/attack_patterns.yml',
-        '/usr/share/logstash/patterns/severity_mapping.yml'
-      )
-    "
-    code => "
-      msg = event.get('message').to_s
-      ip  = event.get('[source][ip]')
+#  ruby {
+#  init => "
+#     require '/usr/share/logstash/patterns/patterns_matcher.rb'
+#     @matcher = AttackPatternMatcher.new(
+#       '/usr/share/logstash/patterns/attack_patterns.yml',
+#       '/usr/share/logstash/patterns/severity_mapping.yml'
+#     )
+#   "
+#   code => "
+#     msg = event.get('message').to_s
+#     ip  = event.get('[source][ip]')
 
-      attacks = @matcher.detect_attacks(msg, ip)
+#     attacks = @matcher.detect_attacks(msg, ip)
 
-      if attacks.empty?
-        event.set('[event][type]', 'access')
-        event.set('[event][outcome]', 'success')
-        event.set('severity', 'info')
-        event.set('[engine][status]', 'active')
-        event.tag('normal')
-      else
-        a = attacks.first
-        event.set('[event][type]', 'attack')
-        event.set('[event][outcome]', 'unknown')
-        event.set('[engine][status]', 'active')
-
-        event.set('severity', a['severity'])
-        event.set('[attack][category]', a['category'])
-        event.set('[attack][technique]', a['technique'])
-        event.set('[attack][confidence]', a['confidence'])
-
-        event.tag('attack')
-      end
-    "
-  }
+#     if attacks.empty?
+#       event.set('[event][type]', 'access')
+#       event.set('[event][outcome]', 'success')
+#       event.set('severity', 'info')
+#       event.set('[engine][status]', 'active')
+#       event.tag('normal')
+#     else
+#       event.set('[event][type]', 'attack')
+#       event.set('[event][outcome]', 'unknown')
+#       event.set('[engine][status]', 'active')
+#       event.set('[attack][technique]', a['technique'])
+#       event.set('[attack][confidence]', a['confidence'])
+#
+#       event.tag('attack')
+#     end
+#    "
+#  }
 
   #--------------------------------------------------------------------------
   # 7. HTTP 응답 코드 기반 결과 판단
