--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -198,7 +198,7 @@ filter {
 ############################
 output {
   opensearch {
-    hosts => ["https://${OPENSEARCH_HOST}"]
+    hosts => ["https://${OPENSEARCH_HOST}:443"]
     index => "2sec-siem-%{+yyyy.MM.dd}"
 
     auth_type => {
