--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -10,7 +10,7 @@ input {
   kinesis {
     kinesis_stream_name => "${KINESIS_STREAM_NAME}"
     region              => "${AWS_REGION}"
-    application_name    => "${PROJECT_NAME}-logstash-consumer"
+    application_name    => "${APPLICATION_NAME}"
 
     codec => plain {
       charset => "ISO-8859-1"
@@ -44,8 +44,15 @@ filter {
           raw = Base64.decode64(parsed['awslogs']['data'])
           json_str = Zlib::GzipReader.new(StringIO.new(raw)).read
 
+          # UTF-8 인코딩 처리 추가
+          json_str = json_str.force_encoding('UTF-8')
+          unless json_str.valid_encoding?
+            json_str = json_str.scrub('?')
+          end
+
           event.set('[@metadata][cw_payload]', json_str)
-          event.remove('message')
+          event.set('[@metadata][was_compressed]', true)
+          # event.remove('message')
         end
       rescue => e
         event.tag('decode_failed')
@@ -201,10 +208,8 @@ output {
     hosts => ["https://${OPENSEARCH_HOST}:443"]
     index => "2sec-siem-%{+yyyy.MM.dd}"
 
-    auth_type => {
-      type   => "aws_iam"
-      region => "${AWS_REGION}"
-    }
+    auth_type => "aws_iam"
+    region => "${AWS_REGION}"
 
     ecs_compatibility => disabled
     manage_template   => false
