--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -208,8 +208,10 @@ output {
     hosts => ["https://${OPENSEARCH_HOST}:443"]
     index => "2sec-siem-%{+yyyy.MM.dd}"
 
-    auth_type => "aws_iam"
-    region => "${AWS_REGION}"
+    auth_type => {
+      type => "aws_iam"
+      region => "${AWS_REGION}"
+    }
 
     ecs_compatibility => disabled
     manage_template   => false
