fix: kinesis 애플리케이션 이름 수정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -11,7 +11,7 @@ input {
   kinesis {
     kinesis_stream_name => "${KINESIS_STREAM_NAME}"
     region              => "${AWS_REGION}"
-    application_name    => "${PROJECT_NAME}-logstash-consumer"
+    application_name    => "${APPLICATION_NAME}"
 
     # charset 강제하지 않음 (UTF-8 기본)
     codec => plain
