fix: logstash config 파일 수정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -1,7 +1,7 @@
 #==============================================================================
 # 2SeC SIEM Logstash Pipeline Configuration
 # CloudWatch Logs → Kinesis → Logstash → OpenSearch
-# Safe / Defensive Version (Decode Failure Preserved)
+# Ultra Defensive Version (handles JSON+base64+gzip, raw-gzip, deadletter)
 #==============================================================================
 
 ############################
@@ -13,8 +13,8 @@ input {
     region              => "${AWS_REGION}"
     application_name    => "${APPLICATION_NAME}"
 
-    # charset 강제하지 않음 (UTF-8 기본)
-    codec => plain
+    # Kinesis 레코드를 문자열로 받되, 바이너리 깨짐 방지를 위해 ISO-8859-1로 1:1 매핑
+    codec => plain { charset => "ISO-8859-1" }
 
     tags => ["kinesis", "cloudwatch"]
   }
@@ -26,17 +26,17 @@ input {
 filter {
 
   ###########################################################################
-  # 0. 원본 message 백업 (절대 삭제하지 않음)
+  # 0) 원본 보존 (사후 분석/보고서용)
   ###########################################################################
   mutate {
-    add_field => {
-      "[@metadata][raw_message]" => "%{message}"
-    }
+    add_field => { "[@metadata][raw_message]" => "%{message}" }
   }
 
   ###########################################################################
-  # 1. CloudWatch Subscription payload 처리
-  #    - JSON {"awslogs":{"data":"..."}} 인지 먼저 확인
+  # 1) CloudWatch/Kinesis payload decode (3-case)
+  #   Case A: JSON {"awslogs":{"data":"base64(gzip(json))"}}
+  #   Case B: raw gzip bytes (message begins with 1F 8B)
+  #   Case C: base64-only string that decodes to gzip(json)
   ###########################################################################
   ruby {
     code => "
@@ -46,42 +46,82 @@ filter {
       require 'stringio'
 
       raw = event.get('message')
+      raw = raw.to_s
+      raw.force_encoding('ASCII-8BIT')  # 바이너리 안전 처리
+
       decoded_payload = nil
+      reason = nil
 
-      begin
-        parsed = JSON.parse(raw)
-
-        if parsed.is_a?(Hash) && parsed.dig('awslogs', 'data')
-          # CloudWatch Subscription 표준 포맷
-          b64 = parsed['awslogs']['data']
-          gz  = Base64.decode64(b64)
-          decoded_payload = Zlib::GzipReader.new(StringIO.new(gz)).read
-          event.tag('cw_subscription')
+      # ---- Case B: raw gzip bytes ----
+      if raw.bytesize >= 2 && raw.getbyte(0) == 0x1f && raw.getbyte(1) == 0x8b
+        begin
+          decoded_payload = Zlib::GzipReader.new(StringIO.new(raw)).read
+          event.tag('cw_raw_gzip')
+        rescue => e
+          reason = 'raw_gzip_decompress_failed'
+          event.set('[deadletter][error]', e.message)
         end
-      rescue
-        # JSON 파싱 실패 → 다음 단계에서 다른 방식 시도
       end
 
-      # JSON이 아니었거나 awslogs.data가 없을 경우
+      # ---- Case A: JSON wrapper ----
+      if decoded_payload.nil?
+        begin
+          parsed = JSON.parse(raw)
+
+          if parsed.is_a?(Hash) && parsed['messageType'] == 'CONTROL_MESSAGE'
+            event.tag('cw_control_message')
+            event.set('[deadletter][reason]', 'control_message')
+            return
+          end
+
+          if parsed.is_a?(Hash) && parsed.dig('awslogs','data')
+            b64 = parsed['awslogs']['data']
+            gz  = Base64.decode64(b64)
+            gz.force_encoding('ASCII-8BIT')
+
+            if gz.bytesize >= 2 && gz.getbyte(0) == 0x1f && gz.getbyte(1) == 0x8b
+              decoded_payload = Zlib::GzipReader.new(StringIO.new(gz)).read
+              event.tag('cw_subscription')
+            else
+              reason = 'awslogs_data_not_gzip'
+            end
+          else
+            reason = 'no_awslogs_data'
+          end
+        rescue => e
+          reason = 'json_parse_failed'
+        end
+      end
+
+      # ---- Case C: base64-only ----
       if decoded_payload.nil?
         begin
           gz = Base64.decode64(raw)
-          decoded_payload = Zlib::GzipReader.new(StringIO.new(gz)).read
-          event.tag('cw_base64_only')
-        rescue
-          event.tag('cw_decode_failed')
+          gz.force_encoding('ASCII-8BIT')
+          if gz.bytesize >= 2 && gz.getbyte(0) == 0x1f && gz.getbyte(1) == 0x8b
+            decoded_payload = Zlib::GzipReader.new(StringIO.new(gz)).read
+            event.tag('cw_base64_only')
+          else
+            reason ||= 'base64_decoded_not_gzip'
+          end
+        rescue => e
+          reason ||= 'base64_decode_failed'
+          event.set('[deadletter][error]', e.message)
         end
       end
 
       if decoded_payload
         event.set('[@metadata][cw_payload]', decoded_payload)
         event.remove('message')
+      else
+        event.tag('cw_decode_failed')
+        event.set('[deadletter][reason]', reason || 'unknown_decode_failure')
       end
     "
   }
 
   ###########################################################################
-  # 2. CloudWatch payload JSON 파싱
+  # 2) cw_payload JSON 파싱
   ###########################################################################
   if [@metadata][cw_payload] {
     json {
@@ -92,40 +132,41 @@ filter {
   }
 
   ###########################################################################
-  # 3. logEvents 배열 분해 (핵심)
+  # 3) logEvents 분해 + message 치환
   ###########################################################################
   if [cw][logEvents] {
-    split {
-      field => "[cw][logEvents]"
-    }
+    split { field => "[cw][logEvents]" }
 
     mutate {
-      replace => {
-        "message" => "%{[cw][logEvents][message]}"
-      }
+      replace => { "message" => "%{[cw][logEvents][message]}" }
     }
 
     date {
       match  => ["[cw][logEvents][timestamp]", "UNIX_MS"]
       target => "@timestamp"
     }
+  } else {
+    # cw 파싱이 안 된 이벤트는 web grok로 가지 않게 표시
+    mutate { add_tag => ["no_cw_logevents"] }
   }
 
   ###########################################################################
-  # 4. 웹 로그 파싱 (Apache / Nginx Combined)
+  # 4) Apache Combined grok (cw logEvents로 정규화된 message만)
   ###########################################################################
-  grok {
-    match => {
-      "message" => "%{IPORHOST:[source][ip]} %{USER:ident} %{USER:auth} \\[%{HTTPDATE:[http][timestamp]}\\] \"%{WORD:[http][request][method]} %{NOTSPACE:[url][original]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} (?:%{NUMBER:[http][response][body][bytes]}|-)"
+  if "no_cw_logevents" not in [tags] and "cw_decode_failed" not in [tags] and "cw_control_message" not in [tags] {
+    grok {
+      match => {
+        "message" => "%{IPORHOST:[source][ip]} %{USER:ident} %{USER:auth} \\[%{HTTPDATE:[http][timestamp]}\\] \"%{WORD:[http][request][method]} %{NOTSPACE:[url][original]} HTTP/%{NUMBER:[http][version]}\" %{NUMBER:[http][response][status_code]} (?:%{NUMBER:[http][response][body][bytes]}|-)"
+      }
+      add_tag => ["web_parsed"]
+      ecs_compatibility => disabled
     }
-    add_tag => ["web_parsed"]
-    ecs_compatibility => disabled
   }
 
   ###########################################################################
-  # 5. URL 파싱
+  # 5) URL 파싱 / GeoIP (web_parsed 성공 시에만)
   ###########################################################################
-  if [url][original] {
+  if "web_parsed" in [tags] and [url][original] {
     ruby {
       code => "
         require 'uri'
@@ -140,10 +181,7 @@ filter {
     }
   }
 
-  ###########################################################################
-  # 6. GeoIP
-  ###########################################################################
-  if [source][ip] {
+  if "web_parsed" in [tags] and [source][ip] {
     geoip {
       source => "[source][ip]"
       target => "[source][geo]"
@@ -152,35 +190,27 @@ filter {
   }
 
   ###########################################################################
-  # 7. 기본 필드 / ECS 성격 필드
+  # 6) 공통 필드
   ###########################################################################
   mutate {
     add_field => {
-      "pipeline"          => "${PROJECT_NAME}-logstash"
+      "pipeline"          => "${APPLICATION_NAME}"
       "[event][kind]"     => "event"
       "[event][category]" => "web"
       "[event][dataset]"  => "web.access"
     }
 
-    remove_field => [
-      "@version",
-      "cw",
-      "ident",
-      "auth"
-    ]
+    remove_field => ["@version", "cw", "ident", "auth"]
   }
 
   ###########################################################################
-  # 8. HTTP 응답 코드 기반 outcome
+  # 7) outcome (web_parsed일 때만)
   ###########################################################################
-  if [http][response][status_code] {
+  if "web_parsed" in [tags] and [http][response][status_code] {
     ruby {
       code => "
         code = event.get('[http][response][status_code]').to_i
-        event.set(
-          '[event][outcome]',
-          code < 400 ? 'success' : 'failure'
-        )
+        event.set('[event][outcome]', code < 400 ? 'success' : 'failure')
       "
     }
   }
@@ -190,16 +220,24 @@ filter {
 # OUTPUT
 ############################
 output {
-  opensearch {
-    hosts => ["https://${OPENSEARCH_HOST}"]
-    index => "2sec-siem-%{+yyyy.MM.dd}"
 
-    auth_type => {
-      type   => "aws_iam"
-      region => "${AWS_REGION}"
+  # 정상 인덱스: cw_control, decode_failed, no_logevents 제외
+  if "cw_control_message" not in [tags] and "cw_decode_failed" not in [tags] and "no_cw_logevents" not in [tags] {
+    opensearch {
+      hosts => ["https://${OPENSEARCH_HOST}"]
+      index => "2sec-siem-%{+yyyy.MM.dd}"
+      auth_type => { type => "aws_iam" region => "${AWS_REGION}" }
+      ecs_compatibility => disabled
+      manage_template   => false
     }
-
-    ecs_compatibility => disabled
-    manage_template   => false
+  } else {
+    # 격리 인덱스(Deadletter): 원본(raw_message) + reason 보존
+    opensearch {
+      hosts => ["https://${OPENSEARCH_HOST}"]
+      index => "2sec-siem-deadletter-%{+yyyy.MM.dd}"
+      auth_type => { type => "aws_iam" region => "${AWS_REGION}" }
+      ecs_compatibility => disabled
+      manage_template   => false
+    }
   }
 }
